Bug 464566 - After wake-from-sleep, some Task Manager icons are missing (just the icons)
Summary: After wake-from-sleep, some Task Manager icons are missing (just the icons)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, wayland-only
Depends on:
Blocks:
 
Reported: 2023-01-20 20:27 UTC by Nate Graham
Modified: 2023-01-30 08:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Missing icons (43.92 KB, image/jpeg)
2023-01-20 20:27 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-01-20 20:27:16 UTC
Created attachment 155459 [details]
Missing icons

Git master Plasma with latest KF5 on Fedora 37.

This has started to happen over the last 2 or 3 days. Sometimes, when I wake my laptop from sleep by opening the list and unlocking, one or more Task Manager icons for running apps will have vanished. The task buttons are still there and work find; only the app icons are missing.

See attached screenshot
Comment 1 Nate Graham 2023-01-20 20:28:21 UTC
Forgot to mention that restarting plasmashell fixes the issue.
Comment 2 Bug Janitor Service 2023-01-28 17:58:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2559
Comment 3 Fushan Wen 2023-01-30 03:27:12 UTC
Git commit 4820ac58d986478b50848bbeaef28db57bda1a39 by Fushan Wen.
Committed on 30/01/2023 at 03:14.
Pushed by fusionfuture into branch 'master'.

libtaskmanager: refresh icon when appId changes

appDataCache removes the cached data after appId changes, and the cached
data contains the app icon.
FIXED-IN: 5.27

M  +3    -1    libtaskmanager/waylandtasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/4820ac58d986478b50848bbeaef28db57bda1a39
Comment 4 Fushan Wen 2023-01-30 08:07:09 UTC
Git commit ca5946f3f47168901601b9470090e9aa241e89a8 by Fushan Wen.
Committed on 30/01/2023 at 08:07.
Pushed by fusionfuture into branch 'cherry-pick-4820ac58'.

libtaskmanager: refresh icon when appId changes

appDataCache removes the cached data after appId changes, and the cached
data contains the app icon.
FIXED-IN: 5.27


(cherry picked from commit 4820ac58d986478b50848bbeaef28db57bda1a39)

M  +3    -1    libtaskmanager/waylandtasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ca5946f3f47168901601b9470090e9aa241e89a8