libtaskmanager: refresh icon when appId changes

appDataCache removes the cached data after appId changes, and the cached
data contains the app icon.

BUG: 464566
FIXED-IN: 5.27


(cherry picked from commit 4820ac58d986478b50848bbeaef28db57bda1a39)